new file:   cadastro.html new file:   cadastro_usuario.php new file:   conexao.php modified:   index.html modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </form>
 
         <a href="#" class="menu__link">Login</a>
-        <a href="#" class="menu__link">Cadastre-se</a>
+        <a href="cadastro.html" class="menu__link">Cadastre-se</a>
     </header>
 
     <!-- Menu lateral (sidebar) -->
