Atualizar o campo de pesquisa

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <form method="post" action="pesquisar.php" class="search-form">
             <input type="text" name="pesquisar" placeholder="Encontre seu lugar ideal..." class="search-input">
             <span>
-                <a href="#"> <i class='bx bx-search' ></i></a>
-             </span>
+                <button type="submit" class="search-button">
+                    <i class='bx bx-search'></i>
+                </button>
+            </span>
         </form>
 
         <a href="#" class="menu__link">Login</a>
