--- a/inicio.html
+++ b/inicio.html
@@ -27,14 +27,15 @@
             </span>
         </form>
 
-        <a href="login.php" class="menu__link">Login</a>
-        <a href="cadastro.html" class="menu__link">Cadastre-se</a>
+        <a href="#" class="menu__link">Logout</a>
     </header>
 
     <!-- Menu lateral (sidebar) -->
     <div class="sidebar" id="sidebar">
         <a href="#">Quem Somos</a>
-        <a href="#">Dúvidas</a>
+        <a href="#">Seus Aluguéis</a>
+        <a href="#">Perfil</a>
+        <a href="#">Configurações</a>
     </div>
 
     <!-- Overlay para quando o menu estiver aberto -->
