criação do perfil do usuario, com função de alterar senha e telefone. cpf e email nao são alterados pois eles são unicos. Alterar nome? Aguardando mais informações sobre anuncios criados pelo perfil etc

--- a/inicio.html
+++ b/inicio.html
@@ -34,7 +34,7 @@
     <div class="sidebar" id="sidebar">
         <a href="#">Quem Somos</a>
         <a href="#">Seus Aluguéis</a>
-        <a href="#">Perfil</a>
+        <a href="perfilhtml.php">Perfil</a>
         <a href="#">Configurações</a>
     </div>
 
