--- a/cadastro.html
+++ b/cadastro.html
@@ -81,7 +81,7 @@
                         <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
                         <br>
                         <div class="text-center">
-                            <a href="index.html" class="btn btn-primary btn-block">Página inicial</a>
+                            <a href="index.php" class="btn btn-primary btn-block">Página inicial</a>
                         </div>
                     </div>
                 </div>
