--- a/cadastro.html
+++ b/cadastro.html
@@ -74,7 +74,7 @@
                                 </div>
                                 <div class="col-12">
                                     <label for="confirmar_senha">Confirme a Senha:</label><br>
-                                    <input type="password" id="confirmar_senha" name="confirmar_senha" placeholder="Confirme sua senha" required>
+                                    <input type="password" id="confirmar_senha" name="confirmar_senha" class="form-control" placeholder="Confirme sua senha" required>
                                 </div>
                             </div>
                         </div>
