Sessão de logout + melhoria da interface em login

--- a/inicio.html
+++ b/inicio.html
@@ -27,7 +27,7 @@
             </span>
         </form>
 
-        <a href="#" class="menu__link">Logout</a>
+        <a href="logout.php" class="menu__link">Sair</a>
     </header>
 
     <!-- Menu lateral (sidebar) -->
