criação do arquivo imoveis html e imoveis php, incompletos, necessário reuniao para falar sobre o bd

--- a/inicio.html
+++ b/inicio.html
@@ -33,9 +33,11 @@
     <!-- Menu lateral (sidebar) -->
     <div class="sidebar" id="sidebar">
         <a href="#">Quem Somos</a>
-        <a href="#">Seus Aluguéis</a>
+        <a href="">Seus Aluguéis</a>
         <a href="perfilhtml.php">Perfil</a>
         <a href="#">Configurações</a>
+        <a href="imoveis.html">Cadastre seu Imóvel</a>
+
     </div>
 
     <!-- Overlay para quando o menu estiver aberto -->
