--- a/cadastro.html
+++ b/cadastro.html
@@ -14,7 +14,7 @@
     </header>
 
     <div class="sidebar" id="sidebar">
-        <a href="#">Quem Somos</a>
+        <a href="quemsomos.html">Quem Somos</a>
         <a href="#">Seus Aluguéis</a>
         <a href="#">Perfil</a>
         <a href="#">Configurações</a>
