--- a/inicio.html
+++ b/inicio.html
@@ -32,7 +32,7 @@
 
     <!-- Menu lateral (sidebar) -->
     <div class="sidebar" id="sidebar">
-        <a href="#">Quem Somos</a>
+        <a href="quemsomos.html">Quem Somos</a>
         <a href="">Seus Aluguéis</a>
         <a href="perfilhtml.php">Perfil</a>
         <a href="#">Configurações</a>
