--- a/quemsomos.html
+++ b/quemsomos.html
@@ -19,7 +19,7 @@
         <!-- Menu lateral (sidebar) -->
         <div class="sidebar" id="sidebar">
             <a href="index.php">Área inicial </a>
-            <a href="#">Quem Somos</a>
+            <a href="quemsomos.html">Quem Somos</a>
             <a href="#">Dúvidas</a>
         </div>
         
@@ -33,7 +33,7 @@
             <section class="direita">
                 <br />
                 <br />
-            <img id="profile-image" src="team-11-420x424.jpg" alt="Foto de Perfil"width="500" height="300">
+            <img id="profile-image" src="byanca.jpg" alt="Foto de Perfil"width="500" height="300" class="hh">
             <h2>Contato</h2>
                 <p>(48) 9 9941-4351<br />
                 <a href="mailto:byancafurlanarq@gmail.com">byancafurlaarq@gmail.com</a>
