Atualização quem somos, api cep

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -88,8 +88,8 @@
                         <div class="equipe">
                         <img src="ma.png" alt="Foto de Perfil" style="width:300px; height:300px;border-radius: 15px; " >
                         <h2>Maria Antônia</h2>
-                        <a href="mailto: ma@gmail.com">E-mail</a><br/>
-                        <a href="https://br.linkedin.com/in/">Linkedin</a>
+                        <a href="mailto: mariaaatonha@gmail.com">E-mail</a><br/>
+                        <a href="https://www.linkedin.com/in/maria-antônia-dos-santos">Linkedin</a>
                     </div>
                     <div class="equipe">
                         <img src="ri.png" alt="Foto de Perfil" style="width:300px; height:300px;border-radius: 15px; " >
