--- a/quemsomos.html
+++ b/quemsomos.html
@@ -123,21 +123,21 @@
                         <h2>Byanca Furlan</h2>
                         <br/>
                         <a href="mailto:byancafurlanarq@gmail.com">E-mail</a><br/>
-                        <a href="https://br.linkedin.com/in/byanca-furlan">Linkedin</a><br/>
+                        <a href="https://br.linkedin.com/in/byanca-furlan"target="_blank">Linkedin</a><br/>
                     </div> 
                         <div class="equipe">
                             <h2 class="texto">Scrum Master</h2>
                             <img src="ma.png" alt="Foto de Perfil" class="img-perfil" >
                             <h2>Maria Antônia</h2>
                             <a href="mailto: mariaaatonha@gmail.com">E-mail</a><br/>
-                            <a href="https://www.linkedin.com/in/maria-antônia-dos-santos">Linkedin</a>
+                            <a href="https://www.linkedin.com/in/maria-antônia-dos-santos"target="_blank">Linkedin</a>
                     </div>
                     <div class="equipe">
                         <h2 class="texto">Desenvolvedora</h2>
                         <img src="ri.png" alt="Foto de Perfil" class="img-perfil" >
                         <h2>Rithiely Schmitt</h2>
                         <a href="mailto: ri@gmail.com">E-mail</a><br/>
-                        <a href="https://br.linkedin.com/in/">Linkedin</a>
+                        <a href="https://br.linkedin.com/in/"target="_blank">Linkedin</a>
                     </div>
              </div>
            </div>
