--- a/imoveis.html
+++ b/imoveis.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="styles.css"> 
+    <style> 
+        .filled {
+    background-color: #f2dcc659; 
+}
+    </style>
 </head>
 <body>
     <header>
@@ -16,7 +21,7 @@
     <div class="sidebar" id="sidebar">
         <a href="quemsomos.html">Quem Somos</a>
         <a href="#">Seus Aluguéis</a>
-        <a href="#">Perfil</a>
+        <a href="perfilhtml.php">Perfil</a>
         <a href="#">Configurações</a>
     </div>
 
@@ -31,16 +36,16 @@
                         <div class="form-group">
                             <div class="form-row">
                                 <div class="col-12">
-                                    <label for="cep">CEP</label>
-                                    <input type="text" name="cep" class="form-control" placeholder="Digite seu CEP" maxlength="8" required>
+                                    <label for="txtCep">CEP</label>
+                                    <input id="txtCep"  type="text" name="cep" class="form-control" placeholder="Digite seu CEP" maxlength="8" oninput="changeColor(this)" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="nome_imovel">Nome do Imóvel</label>
-                                    <input type="text" name="nome_imovel" class="form-control" placeholder="Digite o nome do imóvel" maxlength="50" required>
+                                    <input type="text" name="nome_imovel" class="form-control" placeholder="Digite o nome do imóvel" maxlength="50"oninput="changeColor(this)" required>
                                 </div>
                                 <div class="col-12">
-                                    <label for="rua">Rua</label>
-                                    <input type="text" name="rua" class="form-control" placeholder="Digite a rua" maxlength="50" required>
+                                    <label for="endereco">Rua</label>
+                                    <input id = "endereco" type="text" name="endereco"  class="form-control" placeholder="Digite a rua" maxlength="50" oninput="changeColor(this)" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="numero">Número</label>
@@ -48,39 +53,39 @@
                                 </div>
                                 <div class="col-12">
                                     <label for="bairro">Bairro</label>
-                                    <input type="text" name="bairro" class="form-control" placeholder="Digite o bairro" maxlength="50" required>
+                                    <input id="bairro" type="text" name="bairro"  class="form-control" placeholder="Digite o bairro" maxlength="50"oninput="changeColor(this)" required>
                                 </div>
                                 <div class="col-6">
                                     <label for="cidade">Cidade</label>
-                                    <input type="text" name="cidade" class="form-control" placeholder="Digite a cidade" maxlength="50" required>
+                                    <input id="cidade" type="text" name="cidade"  class="form-control" placeholder="Digite a cidade" maxlength="50"oninput="changeColor(this)" required>
                                 </div>
                                 <div class="col-6">
-                                    <label for="uf">UF</label>
-                                    <input type="text" name="uf" class="form-control" placeholder="Digite a UF" maxlength="2" required>
+                                    <label for="estado">UF</label>
+                                    <input type="text" name="estado" id="estado" class="form-control" placeholder="Digite a UF" oninput="changeColor(this)" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="id_proprietario">ID do Proprietário</label>
-                                    <input type="number" name="id_proprietario" class="form-control" placeholder="Digite o ID do proprietário" required>
+                                    <input type="number" name="id_proprietario" class="form-control" placeholder="Digite o ID do proprietário"oninput="changeColor(this)" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="valor">Valor</label>
-                                    <input type="number" name="valor" class="form-control" placeholder="Digite o valor do imóvel" step="0.01" required>
+                                    <input type="number" name="valor" class="form-control" placeholder="Digite o valor do imóvel" step="0.01"oninput="changeColor(this)" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="descricao">Descrição</label>
-                                    <textarea name="descricao" class="form-control" placeholder="Digite uma descrição" maxlength="500" required></textarea>
+                                    <textarea name="descricao" class="form-control" placeholder="Digite uma descrição" maxlength="500" oninput="changeColor(this)" required></textarea>
                                 </div>
                                 <div class="col-12">
                                     <label for="id_categoria">ID da Categoria</label>
-                                    <input type="number" name="id_categoria" class="form-control" placeholder="Digite o ID da categoria" required>
+                                    <input type="number" name="id_categoria" class="form-control" placeholder="Digite o ID da categoria" oninput="changeColor(this)" required>
                                 </div>
                                 <div class="col-12">
                                     <label for="id_checklist">ID do Checklist (opcional)</label>
-                                    <input type="number" name="id_checklist" class="form-control" placeholder="Digite o ID do checklist">
+                                    <input type="number" name="id_checklist" class="form-control" placeholder="Digite o ID do checklist" oninput="changeColor(this)" >
                                 </div>
                                 <div class="col-12">
                                     <label for="numero_pessoas">Número de Pessoas</label>
-                                    <input type="number" name="numero_pessoas" class="form-control" placeholder="Digite o número de pessoas" required>
+                                    <input type="number" name="numero_pessoas" class="form-control" placeholder="Digite o número de pessoas" oninput="changeColor(this)" required>
                                 </div>
                             </div>
                         </div>
@@ -90,5 +95,49 @@
             </div>
         </form>
     </div>
+    <script>
+    // Função buscaCEP
+    function buscaCep(){
+        let cep = document.getElementById('txtCep').value;
+        if (cep!==""){
+            let url = "https://brasilapi.com.br/api/cep/v1/" + cep;
+            let req = new XMLHttpRequest();
+            req.open("GET", url);
+            req.send();
+
+            //tratar a resposta da requisição
+            req.onload = function(){
+                if(req.status === 200){
+                    let endereco = JSON.parse(req.response);
+                    document.getElementById("endereco").value = endereco.street;
+                    document.getElementById("bairro").value = endereco.neighborhood;
+                    document.getElementById("cidade").value = endereco.city;
+                    document.getElementById("estado").value = endereco.state;
+                }
+                else if (req.status ===400){
+                    alert("CEP inválido");
+                }
+                else{
+                    alert("Erro ao fazer a requisição");
+                }
+            }
+        }
+        else{
+            alert("Digite um CEP válido!");
+        }
+    }
+window.onload = function(){
+let txtCep = document.getElementById('txtCep');
+txtCep.addEventListener("blur", buscaCep);
+    }
+
+    function changeColor(input) {
+            if (input.value.trim() !== "") {
+                input.classList.add('filled'); // Adiciona a classe 'filled'
+            } else {
+                input.classList.remove('filled'); // Remove a classe 'filled'
+            }
+        }
+</script>
 </body>
 </html>
