--- a/quemsomos.html
+++ b/quemsomos.html
@@ -149,19 +149,28 @@
                         <h2 class="texto">Desenvolvedora</h2>
                         <img src="ri.png" alt="Foto de Perfil" class="img-perfil" >
                         <h2>Rithiely Schmitt</h2>
+                        <a href="mailto: rithiely_ph@hotmail.com"target="_blank">E-mail</a><br/>
+                        <a href="https://br.linkedin.com/in/rithiély-schmitt-100b92326/"target="_blank"rel="noopener">Linkedin</a>
+                    </div>
+                    <div class="equipe">
+                        <h2 class="texto">Desenvolvedor</h2>
+                        <img src="ri.png" alt="Foto de Perfil" class="img-perfil" >
+                        <h2>Igor Miguel Raimundo</h2>
                         <a href="mailto: ri@gmail.com"target="_blank">E-mail</a><br/>
-                        <a href="https://br.linkedin.com/in/"target="_blank"rel="noopener">Linkedin</a>
+                        <a href="https://br.linkedin.com/in//"target="_blank"rel="noopener">Linkedin</a>
                     </div>
              </div>
+             </div>
            </div>
-           <br>           <br>
+           <br>           
+           <br>
            <br>
 
           <header>
             
           </header>
            <footer>
-            <p class="rights"><span>&copy;&nbsp;<span id="copyright-year"></span> .Todos os direitos reservados. <span> por Byanca Campos Furlan, Maria Antonia dos Santos e Rithiely Schmitt.</a></span>
+            <p class="rights"><span>&copy;&nbsp;<span id="copyright-year"></span> .Todos os direitos reservados. <span> por Byanca Campos Furlan, Igor Miguel Raimundo, Maria Antonia dos Santos e Rithiely Schmitt.</a></span>
         </footer>
         <script>
             // Função para alternar o menu lateral
